# AILegalAgent

./: .env  .gitignore  DEPLOY.md  DEPLOYMENT.md  PROJECT_SUMMARY.md  README.md  ROADMAP.md  build_release.bat  deploy-infrastructure.bat  docker-compose.yml  env.example.txt  healthcheck.bat  package-lock.json  package.json  setup.bat  start-all.bat  start_dev.bat  start_mcp.bat
backend/: .dockerignore  .env  .env.local  Dockerfile  MCP_README.md  README.md  check_system_integrity.py  create_test_db.py  debug_camel.py  debug_openai_direct.py  pyproject.toml  verify_skills_e2e.py  verify_workforce.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_llm_configs.py  003_add_audit_logs.py  004_add_sentiment_collaboration.py
backend/scripts/: check_key_decryption.py  check_llm_configs.py  check_providers.py  clear_invalid_key.py  create_notifications_table.py  diagnose_chat.py  fix_llm_config.py  init.sql  init_db.py  reset_db.py  seed_cases.py  seed_legal_data.py  test_chat_e2e.py  test_full_flow.py
backend/src/: __init__.py  mcp_server.py
backend/src/agents/: __init__.py  base.py  compliance_officer.py  consensus_agent.py  contract_reviewer.py  contract_steward.py  coordinator.py  document_drafter.py  due_diligence.py  evidence_analyst.py  ip_specialist.py  labor_compliance.py  legal_advisor.py  legal_researcher.py  litigation_strategist.py  regulatory_monitor.py  requirement_analyst.py  risk_assessor.py  sentiment_agent.py  task_context.py  tax_compliance.py  workforce.py
backend/src/api/: main.py
backend/src/core/: __init__.py  config.py  database.py  deps.py  llm_helper.py  privacy.py  responses.py  (+2 more)
backend/tests/: __init__.py  conftest.py  test_advanced_features.py  test_business_agents.py  test_case_service.py  test_chat.py  test_comprehensive_flow.py  test_contract_management.py  test_datacenter.py  test_e2e_advanced.py  test_e2e_user_simulation.py  test_e2e_websocket.py  test_evolution_demo.py  test_evolution_integration.py  test_full_system.py  test_memory_integration.py  test_oa_integration.py  test_performance_benchmark.py  test_sentiment.py  test_traceability.py  test_workforce.py
(+263 files in other folders)
